--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,6 @@ nav{
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 25px;
   margin: 150px 0;
-
 }
 .title{
   text-align: left;
@@ -61,11 +60,14 @@ nav{
 .banner-right{
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: flex-end; 
 }
-.banner-right.bg-img{
-  background-image: url("Circle design.svg");
-  background-repeat: no-repeat;
+.bg-img{
+  cursor: pointer;
+  transition: width 1s, height 1s , transform 1s;
+}
+.bg-img:hover{
+  transform:rotate(25deg);
 }
 .short-img{
   width: 80%;
@@ -200,7 +202,7 @@ footer a{
     order: 2;
   }
   .all-brand{
-    grid-template-columns:1fr;
+    grid-template-columns: 1fr 1fr;
     text-align: center;
   }
   .products{
